I have added width and height to the question titles. Fixed issue where score would be 1 point behind on the end screen

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,6 +53,11 @@ li:nth-child(odd) {
   background-color: #f3edfc;
 }
 
+#question-title {
+  width: 600px;
+  height: 66px;
+}
+
 .answerbtn {
   width: 590px;
   height: 51px;
